processReshardingFieldsForRecipientCollection can use stale db info and incorrectly creates a recipient

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 7.0.12, 8.0.0-rc7, 7.3.4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v8.0, v7.3, v7.0, v6.0, v5.0
    • Cluster Scalability 2024-4-1, Cluster Scalability 2024-4-15, Cluster Scalability 2024-4-29, Cluster Scalability 2024-5-13, Cluster Scalability 2024-5-27, Cluster Scalability 2024-6-10, Cluster Scalability 06/24/24
    • 200
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      processReshardingFieldsForRecipientCollection gets called after a shard metadata refresh is completed. It checks if it is a primary shard of the database and creates a resharding recipient if it passes the test. However, having an up to date collection metadata doesn't imply that the sharding database metadata is up to date. So it can end up creating a recipient by mistake.

              Assignee:
              Nandini Bhartiya
              Reporter:
              Randolph Tan
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: