SERVER-88417: Use refreshed database cache for dBPrimary (#20881)

GitOrigin-RevId: 856991a0c4f2aaf809aac2bd796394a7b9245a58